<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.grow.cmputf17team4.grow.Views.ActivityMain">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/AppTheme.Toolbar"
        android:weightSum="1">
...
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible"
            android:src="@drawable/web_hi_res_512" />

        <ImageButton
            android:id="@+id/toolbar_btn_add_habit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@mipmap/add"
...
