...
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/list_item_btn_complete"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Complete it!"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

...
                android:id="@+id/list_item_text_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/list_item_title"
                app:layout_constraintLeft_toRightOf="@+id/list_item_image_view"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <TextView
...
